paused background animation on mobile because mobile browser has issue refreshing current animation

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -86,6 +86,10 @@ line-height: 0.5rem;
     margin: 0px;
     padding: 0rem 0.5rem;
   }
+
+  #absoluteBottom {
+    animation-play-state: paused;
+  }
 }
 
 
